--- a/ruff.toml
+++ b/ruff.toml
@@ -91,6 +91,7 @@ ignore = [
     "PLR6301", # Method could be a function, class method, or static method
     "PLC0415", # `import` should be at the top-level of a file
     "B008", # Do not perform function call in argument defaults
+    "COM812" # Checks for the absence of trailing commas
 ]
 
 # Allow unused variables when underscore-prefixed.
