add deepseek and unsplash settings

--- a/example.env
+++ b/example.env
@@ -11,8 +11,16 @@ API_URL=http://localhost:8000
 # Gotenberg Configuration
 
 # DeepSeek Configuration
+DEEPSEEK_API_KEY=<your-api-key>
+DEEPSEEK_MODEL=deepseek-chat-v3-0324
+DEEPSEEK_BASE_URL=<your-url>
+DEEPSEEK_TEMPERATURE=0.7
+DEEPSEEK_MAX_CONNECTIONS=5
 
 # Unsplash Configuration
+UNSPLASH_ACCESS_KEY=<your-access-key>
+UNSPLASH_MAX_CONNECTIONS=5
+UNSPLASH_TIMEOUT=20
 
 # MiniO Configuration
 
