--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "editorconfig-checker==3.2.1",
     "fastapi[standard]==0.115.12",
     "httpx>=0.28.1",
+    "pydantic-settings>=2.10.1",
     "pytest>=8.4.1",
     "ruff==0.11.13",
 ]
